# the_aichemist_codex

./: .future_filetree  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .project_checklist.md  CHANGELOG.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  Circular Imports  Curcular Imports PLan  Current_Structure_Analysis.md  DOCUMENTATION.md  Dependency_Analysis_Report.md  Implementation_Plan.md  Imports Plan  Makefile  Newtest  Phase1_DetailedPlan.md  Planner  README-search.md  README-tagging-relationships.md  README.md  README_migration.md  _MAIN_0.toc  add_category_info.py  codebase_investigation_summary.md  errors.md  fast_fix_markers.py  find_md_files.py  fix_all_test_issues.py  fix_duplicate_async.py  fix_literal_markers.py  fix_markers.py  fix_test_issues.py  future_filetree.md  implementation_plan_enhanced_relationship_integration.md  implementation_plan_remaining_file_relationships.md  implementation_plan_smart_organization.md  metadata_extraction_summary.md  (+13 more)
.cursor/: .cursorignore
CodingPython_Projectsthe_aichemist_codextmp/: logscurrent
Notes/: Project_reader.txt  cli.txt  config.txt  current_tree.txt  file_reader.txt  metadata.txt  notification.txt  output_formatter.txt  search.txt  utils.txt
architecture_docs/: architecture.md  config.md  ingest.md  metadata_extraction_summary.md  rollback.md  search.md  utils.md
backend/: cli.py  main.py  pytest.ini
cli/: relationship_commands.py
config/: config.json  logging.yaml  logging_config.py  settings.yaml  sorting_rules.yaml
data/: .encryption_key  backlinks_data.json  rollback.json  secure_config.enc  tmp_logs_index.txt
docs/: Data_Directory_Investigation.md  Looking_For_Data.txt  Makefile  README.md  README.rst  README_ORGANIZATION.md  architecture.rst  build_docs.py  changelog.rst  cli_reference.rst  code_maintenance.md  code_review.md  code_style.rst  conf.py  configuration.rst  contributing.rst  data_directory.md  data_directory_config.md  data_management.rst  development.md  development.rst  directory_structure.rst  documentation_refactoring_plan.md  environment.rst  generate_api_docs.py  getting_started.rst  howto.txt  improvement_tracker.md  index.rst  installation.rst  make.bat  memory-system.md  project_summary.md  roadmap.rst  root_docs_readme.md  tree_structure.txt  usage.rst
memory-bank/: MEMORY_BANK_GUIDE.md  Memory Entity.md  activeContext.md  backlinks-analysis.md  codebase-review.md  mcp-document-insights.md  mcp-integration.md  memory-bank-structure.md  productContext.md  progress.md  projectbrief.md  sequential-thinking-obsidian-workflow.md  systemPatterns.md  techContext.md
modules/: file_manager.md  file_reader.md  ingest.md  output_formatter.md  utils.md
scripts/: MCP-STARTUP-GUIDE.md  README.md  check_circular_imports.py  cleanup_docs.py  cleanup_temp_dirs.py  code_quality.py  codex-dev.ps1  codex-dev.sh  merge-to-main.bat  project_scaffolding_script.py  protect-branch-content.bat  run_analysis.py  start-mcp-servers.ps1  transfer_record.json  update_docs.bat  verify_functions.py  verify_imports.py
source/: conf.py  index.rst
src/: cli.py  main.py
src/the_aichemist_codex/infrastructure/: LOGGING_SETUP_PLAN.md  README.md  pyproject.toml
src/the_aichemist_codex/infrastructure/ai/embeddings/: __init__.py  models.py
src/the_aichemist_codex/infrastructure/ai/search/: search_engine.py
src/the_aichemist_codex/infrastructure/ai/search/providers/: __init__.py  regex_provider.py  similarity_provider.py
src/the_aichemist_codex/infrastructure/analysis/: README.md  __init__.py  code.py  code_analysis_service.py  relationship_graph.py  technical_analyzer.py
src/the_aichemist_codex/infrastructure/config/: __init__.py  manager.py  settings.py
src/the_aichemist_codex/infrastructure/config/loader/: config_loader.py
src/the_aichemist_codex/infrastructure/config/logging/: logging_config.py
src/the_aichemist_codex/infrastructure/config/rules/: rules_engine.py
src/the_aichemist_codex/infrastructure/config/security/: secure_config.py
src/the_aichemist_codex/infrastructure/extraction/: README.md  __init__.py  base_extractor.py  code.py  documents.py  manager.py  mime_detector.py  plan.md
src/the_aichemist_codex/infrastructure/extraction/tagging/: __init__.py  classifier.py  manager.py  schema.py
src/the_aichemist_codex/infrastructure/fs/: __init__.py  changes.py  directory.py  file_metadata.py  file_reader.py  operations.py  parsers.py  rollback.py  rules.py  test_reader.py  watcher.py
src/the_aichemist_codex/infrastructure/memory/: association_utils.py
src/the_aichemist_codex/infrastructure/notification/: __init__.py  email_subscriber.py  notification_manager.py  rule_engine.py  webhook_subscriber.py
src/the_aichemist_codex/infrastructure/parsing/: __init__.py  parsers.py
src/the_aichemist_codex/infrastructure/repositories/: __init__.py  file_code_artifact_repository.py  sqlite_memory_repository.py  sqlite_relationship_repository.py  sqlite_tag_hierarchy_repository.py  sqlite_tag_repository.py
src/the_aichemist_codex/infrastructure/utils/: __init__.py  batch_processor.py  cache_manager.py  sqlasync_io.py
src/the_aichemist_codex/infrastructure/utils/cache/: cache_manager.py
src/the_aichemist_codex/infrastructure/utils/common/: patterns.py  safety.py
src/the_aichemist_codex/infrastructure/utils/concurrency/: concurrency.py
src/the_aichemist_codex/infrastructure/utils/errors/: errors.py
src/the_aichemist_codex/infrastructure/utils/helpers/: safety.py
src/the_aichemist_codex/infrastructure/utils/io/: async_io.py  sqlasync_io.py
src/the_aichemist_codex/infrastructure/validation/: schemas.py
src/the_aichemist_codex/infrastructure/versioning/: __init__.py  diff_engine.py  metadata.py  version_manager.py
src/the_aichemist_codex/infrastructure/versioning/rollback/: __init__.py  engine.py  transaction.py
tests/:  test_file_tree.py  README.md  add_noqa.py  conftest.py  fix_all_tests.py  fix_imports.py  fix_pytest_markers.py  run_data_dir_tests.py  test_aggregator.py  test_archive_parser.py  test_async_changes.py  test_auto_folder.py  (+48 more)
(+1153 files in other folders)
