[project]
dependencies = [
    "aiofiles>=23.2.1",
    "aiosqlite>=0.20.0",
    "platformdirs>=4.2.2",
    "PyYAML>=6.0.1",
    "cryptography>=42.0.8",
]
description = "Infrastructure for The Aichemist Codex"
name = "infrastructure"
readme = "README.md"
requires-python = ">=3.13.0"
version = "0.1.0"

    [project.optional-dependencies]
    windows = [
        "pywin32>=306; sys_platform == 'win32'",
    ]
